src/test/ui/target-feature/tied-features.stderr
error: the target features paca, pacg must all be either enabled or disabled together
  --> $DIR/tied-features.rs:7:5
   |
LL |     #[target_feature(enable = "pacg")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add the missing features in a `target_feature` attribute

error: the target features paca, pacg must all be either enabled or disabled together
  --> $DIR/tied-features.rs:19:1
   |
LL | #[target_feature(enable = "paca")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add the missing features in a `target_feature` attribute

error: aborting due to 2 previous errors

